--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,11 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^26.0.24",
+		"@typescript-eslint/eslint-plugin": "^4.28.4",
+		"@typescript-eslint/parser": "^4.28.4",
 		"axios-mock-adapter": "^1.19.0",
+		"eslint": "^7.31.0",
+		"eslint-plugin-react": "^7.24.0",
 		"jest": "^27.0.6",
 		"ts-jest": "^27.0.3",
 		"typescript": "^4.3.5"
@@ -16,12 +20,14 @@
 	"scripts": {
 		"build": "tsc",
 		"build:watch": "tsc --watch",
-		"test": "jest --config=jest.config.js"
+		"test": "jest --config=jest.config.js",
+		"lint": "eslint '**/*.ts'"
 	},
 	"peerDependencies": {
 		"axios": "^0.21.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"swr": "^0.5.6"
-	}
+	},
+	"dependencies": {}
 }
