--- a/.github/workflows/ci_push.yml
+++ b/.github/workflows/ci_push.yml
@@ -22,14 +22,12 @@ jobs:
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@HEAD
-        with:
-          working-directory: examples/yarn
 
       - name: Lint
         run: yarn lint
 
       - name: Test
-        run: yarn test --ci --coverage --maxWorkers=2
+        run: yarn test
 
       - name: Build
         run: yarn build
