--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"dev:docs": "yarn workspace @crudel/docs dev",
 		"dev:core": "yarn workspace @crudel/core build:watch",
 		"build": "yarn lerna run build --npm-client=yarn",
-		"test": "jest",
+		"test": "yarn lerna run test --npm-client=yarn",
 		"test:core": "yarn workspace @crudel/core test",
 		"lint": "yarn lerna run lint --npm-client=yarn"
 	},
