--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,24 +1,22 @@
-name: CI
+name: Publish
 on:
-  push:
-    branches:
-      - master
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  release:
+    types: [published]
 
-    strategy:
-      matrix:
-        node: ["12.x"]
+jobs:
+  publish:
+  name: Publish
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Use Node ${{ matrix.node }}
+      - name: Use Node 12
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 12
+          registry-url: 'https://npm.pkg.github.com'
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@HEAD
@@ -31,3 +29,4 @@ jobs:
 
       - name: Build
         run: yarn build
+
