--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
 	"typings": "dist/index.d.ts",
 	"author": "Oszlányi Kornél",
 	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
 	"devDependencies": {
 		"@types/jest": "^26.0.24",
 		"@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -28,5 +31,6 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"swr": "^0.5.6"
-	}
+	},
+	"gitHead": "5d0ee38e4b43dd649b3b4c7d7c9bd3d2c93eebec"
 }
