--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   publish:
-  name: Publish
+    name: Publish
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: 'https://npm.pkg.github.com'
+          registry-url: "https://npm.pkg.github.com"
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@HEAD
@@ -29,4 +29,3 @@ jobs:
 
       - name: Build
         run: yarn build
-
