--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,14 @@
 name: CI
-on:
-  push:
-    branches:
-      - master
+on: [push]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
 
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node: ["12.x"]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout repo
@@ -21,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@HEAD
+        uses: bahmutov/npm-install@v1
 
       - name: Lint
         run: yarn lint
