--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,25 +1,28 @@
-name: Publish
-on:
-  release:
-    types: [published]
+name: CD
+on: [push]
+  branches: ["master"]
 
 jobs:
-  publish:
-    name: Publish
-    runs-on: ubuntu-latest
+  build:
+    name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node: ["12.x"]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Use Node 12
+      - name: Use Node ${{ matrix.node }}
         uses: actions/setup-node@v1
         with:
-          node-version: 12
-          registry-url: "https://npm.pkg.github.com"
+          node-version: ${{ matrix.node }}
 
       - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@HEAD
+        uses: bahmutov/npm-install@v1
 
       - name: Lint
         run: yarn lint
@@ -29,3 +32,6 @@ jobs:
 
       - name: Build
         run: yarn build
+      
+      - name: Publish
+        run: yarn lerna publish
