--- a/packages/core/.gitignore
+++ b/packages/core/.gitignore
@@ -1,22 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+*.log
+node_modules
+.cache
+dist
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# out
-/dist
-
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -33,5 +27,3 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# vercel
-.vercel
