--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,47 +1,65 @@
 {
-	"name": "@crudel/core",
-	"version": "0.1.5",
-	"description": "This is the core of the crudel package",
-	"main": "dist/index.js",
-	"typings": "dist/index.d.ts",
-	"author": "Oszlányi Kornél",
-	"license": "MIT",
-	"publishConfig": {
-		"access": "public"
-	},
-	"devDependencies": {
-		"@types/jest": "^26.0.24",
-		"@typescript-eslint/eslint-plugin": "^4.28.4",
-		"@typescript-eslint/parser": "^4.28.4",
-		"axios-mock-adapter": "^1.19.0",
-		"eslint": "^7.31.0",
-		"eslint-plugin-react": "^7.24.0",
-		"jest": "^27.0.6",
-		"ts-jest": "^27.0.3",
-		"typescript": "^4.3.5"
-	},
-	"scripts": {
-		"build": "tsc",
-		"build:watch": "tsc --watch",
-		"test": "jest --config=jest.config.js",
-		"lint": "eslint '**/*.ts'"
-	},
-	"keywords": [
-		"CRUD",
-		"swr",
-		"hook",
-		"react",
-		"fetch"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/oszlanyikornel/cruder"
-	},
-	"peerDependencies": {
-		"axios": "^0.21.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"swr": "^0.5.6"
-	},
-	"gitHead": "22adfd6c377a50fc764839d08ad526d90d01831f"
+  "version": "0.1.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests --ci --coverage --maxWorkers=2",
+    "test:dev": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
+  "peerDependencies": {
+    "axios": "^0.21.1",
+    "react": ">=16",
+    "swr": "^0.5.6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "@crudel/core",
+  "author": "Oszlányi Kornél",
+  "module": "dist/core.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/core.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/core.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "^5.0.2",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "axios-mock-adapter": "^1.19.0",
+    "husky": "^7.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "size-limit": "^5.0.2",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
+  }
 }
