--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "axios-mock-adapter": "^1.19.0",
+    "babel-jest": "^27.0.6",
     "husky": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
