--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
 name: CD
-on: [push]
-  branches: ["master"]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -32,6 +34,6 @@ jobs:
 
       - name: Build
         run: yarn build
-      
+
       - name: Publish
         run: yarn lerna publish
