--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
           git config --global user.name "Oszlányi Kornél"
 
       - name: Publish
-        run: yarn lerna publish --yes
+        run: yarn lerna publish --yes --message "chore(release):publish %v"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_PAT }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_PAT }}
