--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,16 @@ jobs:
           git config --global user.email "koszlanyi777@gmail.com"
           git config --global user.name "Oszlányi Kornél"
 
+      - name: Authenticate with Registry
+        run: |
+          yarn logout
+          echo "@crudel:registry=http://registry.npmjs.org/" > .npmrc
+          echo "registry=http://registry.npmjs.org/" >> .npmrc
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> .npmrc
+          npm whoami
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Publish
         run: yarn lerna publish --yes --message "chore(release):publish %v"
         env:
