--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,6 +3,10 @@
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oszlanyikornel/crudel"
+  },
   "files": [
     "dist",
     "src"
@@ -10,6 +14,7 @@
   "engines": {
     "node": ">=10"
   },
+  "description": "React CRUD hooks built on top of swr.",
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
