--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 	"author": "Oszlányi Kornél",
 	"scripts": {
 		"dev:docs": "yarn workspace @crudel/docs dev",
-		"dev:core": "yarn workspace @crudel/core build:watch",
+		"dev:client": "yarn workspace @crudel/client build:watch",
 		"build": "yarn lerna run build --npm-client=yarn",
 		"test": "yarn lerna run test --npm-client=yarn",
-		"test:core": "yarn workspace @crudel/core test",
+		"test:client": "yarn workspace @crudel/client test",
 		"lint": "yarn lerna run lint --npm-client=yarn",
 		"size": "yarn lerna run size-limit --npm-client=yarn"
 	},
