--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -41,16 +41,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "@crudel/core",
+  "name": "@crudel/client",
   "author": "Oszlányi Kornél",
-  "module": "dist/core.esm.js",
+  "module": "dist/client.esm.js",
   "size-limit": [
     {
-      "path": "dist/core.cjs.production.min.js",
+      "path": "dist/client.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/core.esm.js",
+      "path": "dist/client.esm.js",
       "limit": "10 KB"
     }
   ],
@@ -69,8 +69,11 @@
     "typescript": "^4.3.5"
   },
   "keywords": [
-    "CRUD",
+    "crud",
     "swr",
+    "restful",
+    "api",
+    "frontend",
     "axios",
     "fetch",
     "react",
