--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@crudel/core": "^0.1.10",
+		"@crudel/client": "0.1.10",
 		"axios": "^0.21.1",
 		"next": "11.0.1",
 		"next-connect": "^0.10.1",
