--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -68,6 +68,9 @@
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "crud",
     "swr",
