--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,17 +10,23 @@
 	},
 	"dependencies": {
 		"@crudel/client": "^0.1.12",
+		"autoprefixer": "^10.3.1",
 		"axios": "^0.21.1",
 		"next": "11.0.1",
 		"next-connect": "^0.10.1",
+		"nextra": "^0.4.5",
+		"nextra-theme-docs": "^1.1.7",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"swr": "^0.5.6"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.14",
+		"autoprefixer": "^10.3.1",
 		"eslint": "7.31.0",
 		"eslint-config-next": "11.0.1",
+		"postcss": "^8.3.6",
+		"tailwindcss": "^2.2.7",
 		"typescript": "4.3.5"
 	}
 }
