--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/oszlanyikornel/crudel"
   },
+  "homepage": "https://crudel.vercel.app/",
   "files": [
     "dist",
     "src"
